# oot3dr-logic

./: .gitignore  Makefile
gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
local_testing/: CMakeLists.txt
patch_code/oot3d/: Makefile  oot.ld
patch_code/oot3d/include/: csvc.h  draw.h  input.h  utils.h
patch_code/oot3d/include/lib/: string.h
patch_code/oot3d/include/z3D/: z3D.h  z3Ditem.h
patch_code/oot3d/include/z3D/actors/: z_bg_dy_yoseizo.h  z_en_item00.h
patch_code/oot3d/src/: business_scrubs.c  chest.c  chest.h  dampe.c  demo_effect.c  demo_kankyo.c  draw.c  dungeon_rewards.c  dungeon_rewards.h  entrance.c  entrance.h  gfx.c  grotto.c  heart_container.c  hooks.s  icetrap.h  input.c  item_effect.c  item_effect.h  item_override.c  item_override.h  item_table.c  item_table.h  item_upgrade.c  jabu.c  main.c  patches.s  player.c  rHeap.c  savefile.c  settings.h  spoiler_data.h  string.c
romfs/mm3d/: item_data.yaml  location_data.yaml
romfs/oot3d/: item_data.yaml  location_data.yaml  logic_helpers.yaml  overworld.yaml  overworld_test.yaml
romfs/oot3d/world/: bottom_of_the_well_world_graph.yaml  deku_tree_world_graph.yaml  dodongos_cavern_world_graph.yaml  fire_temple_world_graph.yaml  forest_temple_world_graph.yaml  ganons_castle_world_graph.yaml  gerudo_training_ground_world_graph.yaml  ice_cavern_world_graph.yaml  jabu_jabus_belly_world_graph.yaml  overworld_world_graph.yaml  shadow_temple_world_graph.yaml  spirit_temple_world_graph.yaml  water_temple_world_graph.yaml
source/: CMakeLists.txt  area.cpp  area.hpp  area_id.cpp  area_id.hpp  build_ids.py  config.cpp  config.hpp  debug.cpp  debug.hpp  dungeon.cpp  dungeon.hpp  entrance.cpp  entrance.hpp  file_functions.hpp  file_system_defs.hpp  fill.cpp  fill.hpp  general_item_pool.cpp  general_item_pool.hpp  generate.cpp  generate.hpp  item.cpp  item.hpp  item_pool.cpp  item_pool.hpp  location.cpp  location.hpp  logic.cpp  logic.hpp  main.cpp  pool_functions.hpp  random.hpp  requirement.cpp  requirement.hpp  search.cpp  search.hpp  settings.hpp  spoiler_log.cpp  spoiler_log.hpp  (+4 more)
source/oot3d/: CMakeLists.txt  build_defs.py  oot3d_area.cpp  oot3d_area.hpp  oot3d_dungeon.cpp  oot3d_dungeon.hpp  oot3d_entrance.cpp  oot3d_entrance.hpp  oot3d_item.cpp  oot3d_item.hpp  oot3d_item_pool.cpp  oot3d_item_pool.hpp  oot3d_location.cpp  oot3d_location.hpp  oot3d_logic.cpp  oot3d_logic.hpp  oot3d_world.cpp  oot3d_world.hpp  oot3d_world_fill.cpp  oot3d_world_graph.cpp  oot3d_world_graph.hpp  oot3d_world_graph_pre_defs.hpp  oot3d_world_item_pool.cpp  oot3d_world_logic.cpp
source/utility/: CMakeLists.txt  debug.cpp  file_functions.hpp  log.cpp  log.hpp  pool_functions.hpp  string_util.cpp  string_util.hpp  timing.cpp  timing.hpp
